--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <nav class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
-                    <a href="./index.html" class="header__menu-link">Гайд</a>
+                    <a href="#expedition" class="header__menu-link">Логбук</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="./farm.html" class="header__menu-link">Фарм</a>
+                    <a href="#progression" class="header__menu-link">Прогрессия</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="" class="header__menu-link">Прогресс</a>
+                    <a href="#roadmap" class="header__menu-link">Роадмап</a>
                 </li>
                 <li class="header__menu-item">
                     <a href="" class="header__menu-link">faq</a>
@@ -37,7 +37,7 @@
 <main class="main">
     <section class="section container">
         <div class="section__header">
-            <h3 class="section__title violet-bg">
+            <h3 class="section__title violet-bg" id="expedition">
                 Экспедиция
             </h3>
             <div class="section__description">
@@ -67,9 +67,9 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <button class="button expedition__button">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/zPynKaRi4" class="button expedition__button">
                             Купить
-                        </button>
+                        </a>
                     </li>
                     <li class="expedition__item">
                         <h3 class="expedition__title">ilvl 66-71</h3>
@@ -79,9 +79,9 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <button class="button expedition__button">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/Xg2kgJeCP" class="button expedition__button">
                             Купить
-                        </button>
+                        </a>
 
                     </li>
                     <li class="expedition__item">
@@ -92,9 +92,9 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <button class="button expedition__button">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/jdZPdWRHX" class="button expedition__button">
                             Купить
-                        </button>
+                        </a>
                     </li>
                     <li class="expedition__item">
                         <h3 class="expedition__title content__lvl-orange">ilvl 79-81</h3>
@@ -104,9 +104,9 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <button class="button expedition__button">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/odeZdaOhl" class="button expedition__button">
                             Купить
-                        </button>
+                        </a>
                     </li>
                     <li class="expedition__item">
                         <h3 class="expedition__title content__lvl-red">ilvl 81-83</h3>
@@ -116,27 +116,27 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <button class="button expedition__button">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/36ePDb0F5" class="button expedition__button">
                             Купить
-                        </button>
+                        </a>
                     </li>
                 </ul>
                 <div class="expedition__note">
                     <ul class="expedition__list-boss">
                         <li class="expedition__item-boss">
-                            (50-65) Ворана - <a href="/">Купить</a>
+                            (50-65) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necropolis/ZR8PRE8CQ">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (66-71) Ворана - <a href="/">Купить</a>
+                            (66-71) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necropolis/KvG9vO6c5">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (72-78) Ворана - <a href="/">Купить</a>
+                            (72-78) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necropolis/5KeGKBJTa">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (79-81) Ворана - <a href="/">Купить</a>
+                            (79-81) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necropolis/5KeGKPJfa">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (81-83) Ворана - <a href="/">Купить</a>
+                            (81-83) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necropolis/pdvldWWS0">Купить</a>
                         </li>
                     </ul>
                 </div>
@@ -377,7 +377,7 @@
     <div class="separator"></div>
     <section class="section container">
         <div class="section__header">
-            <h3 class="section__title violet-bg">
+            <h3 class="section__title violet-bg" id="progression">
                 Прогрессия персонажа
             </h3>
             <div class="section__description">
@@ -911,7 +911,7 @@
     </section>
     <section class="section container">
         <div class="section__header">
-            <h3 class="section__title violet-bg">
+            <h3 class="section__title violet-bg" id="roadmap">
                 Roadmap
             </h3>
             <div class="section__description">
