--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="header__inner container">
         <div class="header__logo">
-            <a href="/" class="header__logo-link">7808</a>
+            <a href="./index.html" class="header__logo-link">7808</a>
         </div>
         <nav class="header__menu">
             <ul class="header__menu-list">
@@ -27,7 +27,7 @@
                     <a href="#roadmap" class="header__menu-link">Роадмап</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="" class="header__menu-link">faq</a>
+                    <a href="./farm.html" class="header__menu-link">faq</a>
                 </li>
             </ul>
         </nav>
@@ -54,8 +54,6 @@
                         Фарм журналов экспедиции <span class="notification">Черная коса</span> / <span
                             class="notification">Орден солнца</span> <br/>
                         Фарм журналов на картах - <span class="notification">Туджин</span> / <span class="notification">Дэнинг</span>
-                        <br/>
-                        Атлас под фарм : <a href="/">Ссылка</a>
                     </p>
                 </div>
                 <ul class="expedition__list">
