--- a/index.html
+++ b/index.html
@@ -427,13 +427,13 @@
                             Купить первым слотом
                             <span class="gemslot">
                                 <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Путы времени</span>
-                                </span>
-                                <span class="gemslot__socket gemslot__socket-g">
-                                    <span class="gemslot__text">Осквернение</span>
+                                    <span class="gemslot__text">Огненный рывок</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Шквал клинков</span>
+                                    <span class="gemslot__text">Ускоренное сотворение чар</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Сбор</span>
                                 </span>
                             </span>
                         </span>
@@ -451,13 +451,13 @@
                                     <span class="gemslot__text">Решимость</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Злорадство</span>
+                                    <span class="gemslot__text">Богохульство</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-b">
                                     <span class="gemslot__text">Спасение от стихий</span>
                                 </span>
-                                <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Наставник 2+</span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Путы времени</span>
                                 </span>
                             </span>
                         </span>
@@ -466,7 +466,7 @@
                         </a>
                     </li>
                     <li class="equip__item">
-                        <p class="equip__title">Бальзамировщик</p>
+                        <p class="equip__title">Могильные узы</p>
                         <img src="./images/equip/Allelopathy.png" height="94" width="94" alt="" class="equip__image">
                         <span class="equip__description">
                             Даст выживаемость в больших пачках, много регена
@@ -477,15 +477,15 @@
                                 <span class="gemslot__socket gemslot__socket-g">
                                     <span class="gemslot__text">Ускорение атак</span>
                                 </span>
-                                <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Огненный рывок</span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-r">
                                     <span class="gemslot__text">Жизнеотвод</span>
                                 </span>
                             </span>
                         </span>
-                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/XoY3dnJIP">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/rLoK4Y7TQ">
                             <button class="button">Купить</button>
                         </a>
                     </li>
@@ -500,17 +500,17 @@
                                 <img src="./images/SilverOil.png" alt="">
                             </span>
                             <span class="gemslot">
-                                <span class="gemslot__socket gemslot__socket-r">
-                                    <span class="gemslot__text">Расплавленный панцирь</span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Вихрь</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Сбор</span>
+                                    <span class="gemslot__text">Сотворение чар при поддержании</span>
                                 </span>
                                 <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Божественный гнев</span>
+                                    <span class="gemslot__text">Подношение плоти</span>
                                 </span>
-                                <span class="gemslot__socket gemslot__socket-r">
-                                    <span class="gemslot__text">Жизнеотвод</span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
                                 </span>
                             </span>
                         </span>
@@ -556,20 +556,8 @@
                         <span class="equip__description">
                             Купить по возможности 3-4%+ резиста, в идеале 5, но дорого, ячейки не важны
                             <span class="gemslot">
-                                <span class="gemslot__socket gemslot__socket-g">
-                                    <span class="gemslot__text">Вихрь</span>
-                                </span>
-                                <span class="gemslot__socket gemslot__socket-g">
-                                    <span class="gemslot__text">Осквернение</span>
-                                </span>
-                                <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Сотворение чар при поддержании</span>
-                                </span>
-                                <span class="gemslot__socket gemslot__socket-b">
-                                    <span class="gemslot__text">Подношение плоти</span>
-                                </span>
                                 <span class="gemslot__socket gemslot__socket-r">
-                                    <span class="gemslot__text">Жизнеотвод</span>
+                                    <span class="gemslot__text">Расплавленный панцирь ваал</span>
                                 </span>
                             </span>
                         </span>
@@ -623,12 +611,12 @@
                         </a>
                     </li>
                     <li class="equip__item">
-                        <p class="equip__title">Вкус ненависти</p>
-                        <img src="./images/equip/TasteOfHate.png" height="94" width="47" alt="" class="equip__image">
+                        <p class="equip__title">Рубиновый флакон</p>
+                        <img src="./images/ruby.png" height="94" width="47" alt="" class="equip__image">
                         <span class="equip__description">
-                            Купить по возможности, довольно дорогой первый день
+                            Либо другой в зависимости от сопротивлений.
                         </span>
-                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/DlE5t5">
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/OVowDglSE">
                             <button class="button">Купить</button>
                         </a>
                     </li>
