--- a/farm.html
+++ b/farm.html
@@ -17,16 +17,13 @@
         <nav class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
-                    <a href="./index.html" class="header__menu-link">Гайд</a>
+                    <a href="./index.html" class="header__menu-link">Основной</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="./farm.html" class="header__menu-link">Фарм</a>
+                    <a href="./act.html" class="header__menu-link">Акты</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="" class="header__menu-link">Прогресс</a>
-                </li>
-                <li class="header__menu-item">
-                    <a href="./farm.html" class="header__menu-link">faq</a>
+                    <a href="./farm.html" class="header__menu-link">Экспедиция</a>
                 </li>
             </ul>
         </nav>
