--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
         <nav class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
-                    <a href="#expedition" class="header__menu-link">Логбук</a>
+                    <a href="./farm.html" class="header__menu-link">Экспедиция</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#progression" class="header__menu-link">Прогрессия</a>
-                </li>
-                <li class="header__menu-item">
-                    <a href="#roadmap" class="header__menu-link">Роадмап</a>
-                </li>
-                <li class="header__menu-item">
-                    <a href="./farm.html" class="header__menu-link">faq</a>
+                    <a href="./act.html" class="header__menu-link">Акты</a>
                 </li>
             </ul>
         </nav>
