--- a/act.html
+++ b/act.html
@@ -40,7 +40,7 @@
                 <li>Убиваем босса в конце, Берем в награду <span class="npc-name">Волна холода</li>
                 <li>Бежим до портала</li>
                 <li>Убиваем босса - тп в город - берем <span class="npc-name">Ртутный флакон</span></li>
-                <li>Берем 3 квестовых предмета, идем в заводь</li>
+                <li>Берем 3 квестовых предмета, идем в <span class="npc-name">Сырой проход </span></li>
                 <li>Просто бежим</li>
                 <li>Бежим</li>
                 <li>Бежим</li>
@@ -92,6 +92,22 @@
               <li>Ищем <span class="npc-name">Библиотека(13)</span>, делаем квест, берем <span class="npc-name">Голодное остервенение</span></li>
               <li>Возвращаемся в <span class="npc-name">Имперские сады(12)</span>, ищем <span class="npc-name">Перст Господень(14)</span></li>
               <li>Зачищаем, идем в 4й акт</li>
+            </ol>
+          </div>
+        </li>
+        <li class="act__item">
+          <div class="act__image">
+            <img src="./images/act/4.png" width="614" height="395" alt="">
+          </div>
+          <div class="act__description">
+            <ol>
+              <li>Пробегаем</li>
+              <li>Убиваем босса, лутаем квестовый итем открываем проход в городе(3)</li>
+              <li>Пробегаем</li>
+              <li>Ищем бабу и 2 портала, зачищаем правый, зачищаем левый, открываем проход в локацию(9)</li>
+              <li>Пробегаем</li>
+              <li>Пробегаем убиваем финалку, возвращаемся в город</li>
+              <li>Идем на подъемник(11)</li>
             </ol>
           </div>
         </li>
